refactor: 주문 1차 refactor